# C-plus-plus

./: README.md
AsnyNetWorkDemo/: Readme.txt
AsnyNetWorkDemo/3rdpart/cJSON/.svn/: entries
AsnyNetWorkDemo/3rdpart/libuv/lib/: libuv.la  libuv.so.1.0.0
AsnyNetWorkDemo/3rdpart/libuv/lib/pkgconfig/: libuv.pc
ConvertVideo/: ConvertVideo.sln  ConvertVideo.vcxproj  ConvertVideo.vcxproj.filters  Custom_Parse_Json.cpp  Custom_Parse_Json.h  main.cpp  parse_file.cpp  parse_file.h  test.json  test.xml
Deco_Enco/: ConvertVideo.vcxproj  ConvertVideo.vcxproj.filters  ds.h264  ffmpeg_test.cpp  ffmpeg_test.h  main.cpp
Deco_Enco/docs/: 编解码流程.vsdx
Deco_Enco/ffmpeg/: README.txt
Deco_Enco/ffmpeg/examples/: avio_dir_cmd.c  avio_reading.c  decode_audio.c  decode_video.c  demuxing_decoding.c  encode_audio.c  encode_video.c  extract_mvs.c  filter_audio.c  filtering_audio.c  filtering_video.c  http_multiclient.c  hw_decode.c  metadata.c  muxing.c  qsvdec.c  remuxing.c  transcode_aac.c  transcoding.c  vaapi_encode.c  vaapi_transcode.c
Deco_Enco/ffmpeg/include/libavdevice/: version.h
Deco_Enco/ffmpeg/include/libavformat/: avio.h  version.h
Deco_Enco/ffmpeg/include/libavutil/: ffversion.h
Deco_Enco/ffmpeg/include/libpostproc/: version.h
Deco_Enco/ffmpeg/lib/: avcodec-58.def  avcodec.lib  avdevice-58.def  avdevice.lib  avfilter-7.def  avfilter.lib  avformat-58.def  avformat.lib  avutil-56.def  avutil.lib  postproc.lib  swresample-3.def  swresample.lib  swscale.lib
audio_resample/: redme.txt
audio_resample/libsamplerate_test/: 8k_process.pcm  build.sh  demo  main.cpp  main.cpp~
audio_resample/speexdsp_test/: 8k.pcm  build.sh  demo  main.cpp
ffmpeg_stream_push/: Makefile  demo  ffmpeg_stream_pusher.cpp  ffmpeg_stream_pusher.h  main.cpp  run.sh
libcurl_demo/: CMakeLists.txt  Readme.txt  ftpclient.cpp  ftpclient.h  main.cpp
libcurl_demo/3rdpart/curl7.69.1/lib/: libcurl.la  libcurl.so.4.6.0
libcurl_demo/3rdpart/curl7.69.1/lib/pkgconfig/: libcurl.pc
libxl_cracked/: .gitignore  LICENSE  README.md  build_linux_release.sh  make_sln.bat
libxl_cracked/excel_files/: excel2003.xls  excel2007.xlsx
libxl_cracked/src/: CMakeLists.txt  main.cpp
